# AlphaZeroTicTacToe

./: .gitignore  README.md  app.py  data_gen_cfg.yaml  demo.ipynb  logging_config.yaml  pyproject.toml  ruff.toml  test_training_cfg.yaml  training_cfg.yaml  utils.py
mcts/: alpha_zero_mcts.py  brute_force_mcst_node.py  brute_mcts.py  mcst_node.py  mcts.py  parse_tree.py
neural_networks/: data_prep.py  input_features.py  load_model.py  tic_tac_toe_net.py
scripts/: gen_test_data.py  train.py  vis.py
self_play/: game_data.py  reward_assignment.py  self_play.py  self_play_cfg.yaml
static/css/: styles.css
static/js/: main.js  vis_tree_data.js
templates/: index.html
tests/: test_brute_force_mcts.py  test_tic_tac_toe.py
tic_tac_toe/: board.py  game_old.py  mcts.py  mcts_old.py  parse_tree.py  player.py  tmp.py
validation/: batch_search_perf.py  data_gen_perf.py  dataset_val.py  gen_test_boards.py  gen_test_data.py  gen_test_game.py  model_validation.py  utils.py
