[project]
name = "tictactoebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.1.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "click==8.1.7",
    "colorama==0.4.6",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "filelock==3.16.1",
    "flask==3.1.0",
    "flask-socketio==5.4.1",
    "fonttools==4.55.3",
    "fsspec==2024.10.0",
    "grpcio==1.69.0",
    "h11==0.14.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.4",
    "kiwisolver==1.4.8",
    "markdown==3.7",
    "markupsafe==3.0.2",
    "matplotlib==3.10.0",
    "mlflow>=2.19.0",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==2.1.3",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "protobuf==5.29.3",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "python-engineio==4.10.1",
    "python-socketio==5.11.4",
    "pytz==2024.2",
    "pyyaml==6.0.2",
    "setuptools==75.5.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sympy==1.13.1",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.5.1",
    "torch-tb-profiler==0.4.3",
    "torchinfo>=1.8.0",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
]
