[project]
name = "tictactoebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "mlflow>=2.20.1",
    "numpy>=2.2.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchinfo>=1.8.0",
    "torchvision>=0.21.0",
]
